[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/gfx/player/Player_ArmL_Idle.png" type="Texture" id=1]
[ext_resource path="res://assets/gfx/npcs/tie/tie_blue.png" type="Texture" id=2]
[ext_resource path="res://assets/gfx/npcs/glasses/glasses_blue.png" type="Texture" id=3]
[ext_resource path="res://assets/gfx/npcs/facial/facial_green.png" type="Texture" id=4]
[ext_resource path="res://assets/gfx/npcs/hair/hair_blue_buns.png" type="Texture" id=5]
[ext_resource path="res://assets/gfx/npcs/ants/ant_1_body_blue.png" type="Texture" id=6]
[ext_resource path="res://assets/gfx/npcs/ants/ant_1_head_blue.png" type="Texture" id=7]
[ext_resource path="res://assets/gfx/player/Player_ArmR_Idle.png" type="Texture" id=8]
[ext_resource path="res://src/npc/npc.gd" type="Script" id=9]
[ext_resource path="res://src/npc/Chat.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/gfx/npcs/ants/ant-leg.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 17 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 38, 10 )

[sub_resource type="Animation" id=3]
resource_name = "Idle"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("AntPivot/HeadPivot:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -8.34465e-07, -0.25, 0, 0.25, 0, -1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("AntPivot/HeadPivot:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -1.19209e-07, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("AntPivot/HeadPivot:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -8.34465e-07, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("AntPivot/HeadPivot:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -1.19209e-07, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("AntPivot/ArmPivot/ArmL:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AntPivot/ArmPivot/ArmR:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Type"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AntPivot/ArmPivot/ArmL:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AntPivot/ArmPivot/ArmR:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( 0, 0 ), Vector2( 0, -4 ) ]
}

[sub_resource type="AnimationNodeAdd2" id=6]

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Type"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Idle"

[sub_resource type="AnimationNodeTimeSeek" id=9]

[sub_resource type="AnimationNodeBlendTree" id=10]
graph_offset = Vector2( -648, 21 )
nodes/Add2/node = SubResource( 6 )
nodes/Add2/position = Vector2( -120, 200 )
nodes/Animation/node = SubResource( 8 )
nodes/Animation/position = Vector2( -300, 100 )
"nodes/Animation 2/node" = SubResource( 7 )
"nodes/Animation 2/position" = Vector2( -340, 240 )
nodes/Seek/node = SubResource( 9 )
nodes/Seek/position = Vector2( 120, 160 )
node_connections = [ "output", 0, "Seek", "Seek", 0, "Add2", "Add2", 0, "Animation", "Add2", 1, "Animation 2" ]

[sub_resource type="AnimationNodeStateMachine" id=11]
states/Idle/node = SubResource( 10 )
states/Idle/position = Vector2( 173, 65 )
start_node = "Idle"
graph_offset = Vector2( -362, -55 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=12]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 5, 4.5 )

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=15]
resource_name = "extend"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.1, 0.2, 0.3, 4.6, 4.7, 4.8, 4.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3, 2, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=16]
resource_name = "retreat"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 2, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Npc" type="KinematicBody2D" groups=["npc"]]
collision_layer = 8
script = ExtResource( 9 )

[node name="AntPivot" type="Node2D" parent="."]
position = Vector2( 22, 19 )

[node name="Body" type="Sprite" parent="AntPivot"]
texture = ExtResource( 6 )
centered = false

[node name="Tie" type="Sprite" parent="AntPivot"]
texture = ExtResource( 2 )
centered = false

[node name="ArmPivot" type="Node2D" parent="AntPivot"]
position = Vector2( -23, -19 )

[node name="ArmL" type="Sprite" parent="AntPivot/ArmPivot"]
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 64, 64 )

[node name="ArmR" type="Sprite" parent="AntPivot/ArmPivot"]
texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 64, 64 )

[node name="HeadPivot" type="Node2D" parent="AntPivot"]
position = Vector2( -8.34465e-07, -1.19209e-07 )

[node name="Head" type="Sprite" parent="AntPivot/HeadPivot"]
texture = ExtResource( 7 )
centered = false

[node name="Hair" type="Sprite" parent="AntPivot/HeadPivot"]
texture = ExtResource( 5 )
centered = false

[node name="FacialHair" type="Sprite" parent="AntPivot/HeadPivot"]
texture = ExtResource( 4 )
centered = false

[node name="Glasses" type="Sprite" parent="AntPivot/HeadPivot"]
texture = ExtResource( 3 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 40, 51 )
shape = SubResource( 1 )

[node name="DetectionBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionBox"]
position = Vector2( 39, 51 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 3 )
anims/RESET = SubResource( 4 )
anims/Type = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 11 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 12 )
parameters/Idle/Add2/add_amount = 1.0
parameters/Idle/Seek/seek_position = -1.0

[node name="Chat" parent="." instance=ExtResource( 10 )]
position = Vector2( 59, 25 )
z_index = 2
z_as_relative = false

[node name="Leg" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
monitoring = false

[node name="Sprite" type="Sprite" parent="Leg"]
position = Vector2( 63, 54 )
texture = ExtResource( 11 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Leg"]
position = Vector2( 63, 57.5 )
shape = SubResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Leg"]
anims/RESET = SubResource( 14 )
anims/extend = SubResource( 15 )
anims/retreat = SubResource( 16 )

[connection signal="body_entered" from="DetectionBox" to="." method="_on_DetectionBox_body_entered"]
[connection signal="body_exited" from="DetectionBox" to="." method="_on_DetectionBox_body_exited"]
[connection signal="body_entered" from="Leg" to="." method="_on_Leg_body_entered"]
